Readme edits from Rachel

--- a/run-lstm-with-bmi.ipynb
+++ b/run-lstm-with-bmi.ipynb
@@ -32,6 +32,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(data=[ 9.791319,  9.141785,  8.492354, ..., 14.599342,\n",
+       "                   13.549606, 12.501509],\n",
+       "             mask=False,\n",
+       "       fill_value=1e+20,\n",
+       "            dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_data['temperature'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
