frac timesteps, rm data dict, notebooks, 0 runoff bound, readme, +more!

--- a/notebooks/lstm_serialization_test.ipynb
+++ b/notebooks/lstm_serialization_test.ipynb
@@ -20,6 +20,8 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "from netCDF4 import Dataset\n",
+    "import sys\n",
+    "sys.path.append(\"../src/\")\n",
     "# This is the BMI LSTM that we will be running\n",
     "import bmi_lstm\n",
     "\n",
@@ -30,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This sample dataset comes from NeuralHydrology: \n",
     "# https://github.com/neuralhydrology/neuralhydrology/tree/master/test/test_data/camels_us/hourly\n",
-    "sample_data = Dataset('./data/usgs-streamflow-nldas_hourly.nc', 'r')\n",
+    "sample_data = Dataset('../data/usgs-streamflow-nldas_hourly.nc', 'r')\n",
     "\n",
     "# Four basins are included in this sample\n",
     "sample_basins = {sample_data['basin'][x]:x for x in range(len(list(sample_data['basin'])))}\n"
@@ -51,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "model1 = bmi_lstm.bmi_LSTM()\n",
     "\n",
     "# Initialize model with a configuration file\n",
-    "model1.initialize(bmi_cfg_file=Path('./bmi_config_files/01022500_hourly_slope_mean_precip_temp.yml'))"
+    "model1.initialize(bmi_cfg_file=Path('../bmi_config_files/01022500_hourly_slope_mean_precip_temp.yml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -331,10 +333,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26efa1eb588>"
+       "<matplotlib.legend.Legend at 0x1e131e59808>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -411,10 +413,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26ef9b39708>"
+       "<matplotlib.legend.Legend at 0x1e1317cdbc8>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
