--- a/notebooks/run_lstm_with_bmi_nldas.ipynb
+++ b/notebooks/run_lstm_with_bmi_nldas.ipynb
@@ -26,14 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "from netCDF4 import Dataset\n",
-    "from lstm import bmi_lstm  # Load module bmi_lstm (bmi_lstm.py) from lstm package.\n",
-    "import pickle\n",
-    "import xarray as xr"
+    "from lstm import bmi_lstm  # Load module bmi_lstm (bmi_lstm.py) from lstm package."
    ]
   },
   {
@@ -53,7 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os, os.path\n",
     "lstm_dir = os.path.expanduser('../lstm/')\n",
     "os.chdir( lstm_dir )\n",
